--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<properties>
 		<spring-ver>3.2.13.RELEASE</spring-ver>
+		<gson-version>2.8.2</gson-version>
 	</properties>
 
 	<dependencies>
@@ -17,5 +18,13 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring-ver}</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson-version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
